change sorting for the processing log

--- a/supercon2/templates/process_log.html
+++ b/supercon2/templates/process_log.html
@@ -105,7 +105,7 @@
                     pageCount: 0,
                     itemsPerPage: 10,
                     itemsPerPageOptions: [25, 50, 100],
-                    sortBy: ['message'],
+                    sortBy: ['timestamp', 'hash'],
                     sortDesc: true,
                     selectedItems: [],
                     filteredItems: [],
