--- a/supercon2/templates/process_log.html
+++ b/supercon2/templates/process_log.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-    <title>SuperCon2 | Extraction log</title>
+    <title>SuperCon2 | Processing log</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.5.95/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.6.3/dist/vuetify.min.css" rel="stylesheet">    <link rel="icon" type="image/x-icon" href={{ url_for('static', filename='resources/img/favicon.ico' ) }} />
@@ -25,7 +25,7 @@
         <v-container fluid>
             <v-row class="justify-space-between ma-0">
                 <v-card flat>
-                    <h2>SuperCon<sup>2</sup> | Extraction log</h2>
+                    <h2>SuperCon<sup>2</sup> | Processing log</h2>
                 </v-card>
             </v-row>
             <v-data-table v-model="selectedItems" :headers="showHeaders" :items="items" :dense="true" single-select
@@ -49,7 +49,9 @@
                                 hide-details>
                                 <v-select :items="headerObject.status.selectItems" v-model="header.filterKeyword"></v-select>
                             </v-radio-group>
-                            <template v-else-if="header.value === 'actions'"></template>
+                            <template v-else-if="header.value === 'service'" dense hide-details>
+                                <v-select :items="headerObject.service.selectItems" v-model="header.filterKeyword"></v-select>
+                            </template>
                             <template v-else>
                                 <v-text-field v-model="header.filterKeyword" type="text" placeholder="keyword"
                                     hide-details clearable>
@@ -114,7 +116,10 @@
                         { text: 'Record id', value: 'id', hidden: true, filter: this.idFilter, filterKeyword: '', shouldHideEmpty: false, width: 120, },
                         { text: 'Update count', value: 'update_count', hidden: true, shouldHideEmpty: false, width: 10, },
                         { text: 'Message', value: 'message', hidden: false, filter: this.messageFilter, filterKeyword: '', shouldHideEmpty: false },
-                        { text: 'Service', value: 'service', hidden: false, filter: this.serviceFilter, filterKeyword: '', shouldHideEmpty: false },
+                        { text: 'Service', value: 'service', hidden: false, filter: this.serviceFilter, filterKeyword: 'all', shouldHideEmpty: false,
+                            selectItems: [
+                                'all', 'extraction', 'table_processing'
+                            ]},
                         { text: 'Path', value: 'path', hidden: false, filter: this.pathFilter, filterKeyword: '', shouldHideEmpty: false },
                         { text: 'Document', value: 'hash', hidden: false, filter: this.hashFilter, filterKeyword: "{{hash}}", width: 120, shouldHideEmpty: false },
                         { text: 'Timestamp', value: 'timestamp', hidden: false, filter: this.timestampFilter, filterKeyword: '', shouldHideEmpty: false },
@@ -250,8 +255,8 @@
                         return ''
                     }
                 },
-                typeFilter(value, search, item) {
-                    const keyword = this.headerObject.type.filterKeyword
+                serviceFilter(value, search, item) {
+                    const keyword = this.headerObject.service.filterKeyword
                     switch (keyword) {
                         case 'all':
                             return true
