fix dropdown box

--- a/supercon2/templates/process_log.html
+++ b/supercon2/templates/process_log.html
@@ -119,7 +119,7 @@
                         { text: 'Message', value: 'message', hidden: false, filter: this.messageFilter, filterKeyword: '', shouldHideEmpty: false },
                         { text: 'Service', value: 'service', hidden: false, filter: this.serviceFilter, filterKeyword: 'all', shouldHideEmpty: false,
                             selectItems: [
-                                'all', 'extraction', 'table_processing'
+                                'all', 'extraction', 'table_compute'
                             ]
                         },
                         { text: 'Path', value: 'path', hidden: false, filter: this.pathFilter, filterKeyword: '', shouldHideEmpty: false },
