--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -323,7 +323,7 @@
                         },
                         {
                             text: 'Latest error type', value: 'error_type', hidden: false, filter: this.errorTypeFilter, filterKeyword: 'all', shouldHideEmpty: false,
-                            selectItems: [{"value": "extraction", "text": "Extraction"}], // filled by loadErrorTypes method
+                            selectItems: [], // filled by loadErrorTypes method
                         },
                         {
                             text: 'Status', value: 'status', sortable: false, hidden: true, filter: this.statusFilter, filterKeyword: 'all', width: 80,
