--- a/supercon2/templates/index.html
+++ b/supercon2/templates/index.html
@@ -45,7 +45,7 @@
                 <ul>
                     <li><a href="https://github.com/lfoppiano/supercon2/blob/develop/README.md">Documentation</a></li>
                     <li><a href="{{ url_for('supercon.get_automatic_database') }}">Database</a></li>
-                    <li><a href="{{ url_for('supercon.get_curation_log') }}">Data correction log</a></li>
+                    <li><a href="{{ url_for('supercon.get_curation_log') }}">Curation log</a></li>
                     <li><a href="{{ url_for('supercon.get_training_data') }}">Training data management</a></li>
                     <li><a href="{{ url_for('supercon.get_process_log') }}">Automatic data processing log</a></li>
                     <li><a href="{{ url_for('supercon.get_stats') }}">Papers statistics</a></li>
